--- a/backgrounds.css
+++ b/backgrounds.css
@@ -6,7 +6,7 @@
     position: relative;
     box-shadow: 0 12px 15px 0 rgba(0,0,0,.24), 0 17px 50px 0 rgba(0,0,0,.19);
 }
-/* imagem no centro, transparente no container. */
+/* The background image will be in the center, with the container transparent.. */
 
 .login-wrap {
     width: 100%;
@@ -17,15 +17,15 @@
     box-shadow: 0 12px 15px 0 rgba(0,0,0,.24), 0 17px 50px 0 rgba(0,0,0,.19);
     float: left;
 }
-/* Imagem a esquerda transparente no container. */
+/* The background image will be in the left-side, twith the container transparent.. */
 
 body {
     margin: 0;
     padding: 0;
-    background: url(http://localhost/github/Login-BusCompany/background.png) no-repeat center;
+    background: url(http://localhost/github/Login-BusCompany/_background.jpg) no-repeat center;
     background-size: cover;
   }
-/* No corpo (background) da página,fora do container. */
+/* The background image will be in full page, outside the container. */
 
 .login-wrap{
     width:100%;
@@ -33,7 +33,7 @@ body {
     max-width:525px;
     min-height:670px;
     position:relative;
-    background:url(http://localhost/github/Login-BusCompany/background2.png) no-repeat center;
+    background:url(http://localhost/github/Login-BusCompany/_background.jpg) no-repeat center;
     box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
 }
-/* Background somente do container.  */
+/* The background image will be only in the container.  */
