--- a/login.css
+++ b/login.css
@@ -2,7 +2,7 @@ body{
 	margin:0;
 	color:#6a6f8c;
 	padding: 0;
-	background:url(https://github.com/rafaeltenoriogama/Login-BusCompany/blob/internal/_background.jpg) no-repeat center;
+	background:url(https://raw.githubusercontent.com/rafaeltenoriogama/Login-BusCompany/internal/_background.jpg) no-repeat center;
 	background-size: cover;
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
